<resources>
    <string name="app_name">Splash</string>
    <string name="search_label">Search</string>
    <string name="search">Search</string>
    <string name="text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</string>
    <string name="detail_info_button">Detail info button</string>
    <string name="share_button">Share button</string>
    <string name="download_button">Download button</string>
    <string name="setting_button">Setting Button</string>
    <string name="photos">Photos</string>
    <string name="user">User</string>
    <string name="collections">Collections</string>
    <string name="editorial">Editorial</string>
    <string name="following">Following</string>
    <string name="info">Info</string>
    <string name="view">View</string>
    <string name="downloads">Downloads</string>
    <string name="camera">Camera</string>
    <string name="camera_model">Camera Model</string>
    <string name="exposure_time">Exposure time</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal length</string>
    <string name="iso">Iso</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="effettua_il_login_per_caricare_foto_e_seuire_i_tuoi_aminci">Effettua il login per caricare foto e seuire i tuoi aminci</string>
    <string name="cover_collection">Cover collection</string>
    <string name="user_image">User image</string>
    <string name="about">About</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="language">Language</string>
    <string name="italian">Italian</string>
    <string name="english">English</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="email">Email</string>
    <string name="biography">Biography</string>
    <string name="biography">Biography</string>
    <string name="instagram">Instagram</string>
    <string name="instagram">Instagram</string>
    <string name="save">Save</string>
    <string name="statistics">Statistics</string>
    <string name="total">Total</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="stats">Stats</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="unofficial_unsplash_app">Unofficial Unsplash App</string>
    <string name="skip">Skip</string>
</resources>