<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.settings.SettingLanguage">

    <include
        android:id="@+id/include_header"
        layout="@layout/include_header_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/include_header">

        <TextView
            android:id="@+id/title_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawablePadding="24dp"
            android:padding="16dp"
            android:text="@string/language"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_language"
            app:drawableTint="#A8A8A8" />

        <RadioGroup
            android:id="@+id/radio_group_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/language_italian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:text="@string/italian" />

            <RadioButton
                android:id="@+id/language_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:text="@string/english" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/edit_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_save"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/include_menu_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/include_menu_bar"
        layout="@layout/include_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
