<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.settings.SettingAbout">

    <include
        android:id="@+id/include_header"
        layout="@layout/include_header_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/include_header">

        <TextView
            android:id="@+id/title_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawablePadding="24dp"
            android:padding="16dp"
            android:text="@string/about"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_info"
            app:drawableTint="#A8A8A8" />

        <TextView
            android:id="@+id/setting_about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder"
            android:textColor="#A8A8A8"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/setting_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica"
        android:padding="12dp"
        android:text="@string/version_1_0"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/include_menu_bar" />

    <include
        android:id="@+id/include_menu_bar"
        layout="@layout/include_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
