<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.settings.SettingsScreen">

    <include
        android:id="@+id/include_header"
        layout="@layout/include_header_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/include_header">

        <TextView
            android:id="@+id/title_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawablePadding="24dp"
            android:padding="16dp"
            android:text="@string/profile"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_biography"
            app:drawableTint="#A8A8A8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/username"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="First Name"
            android:backgroundTint="#A8A8A8"
            android:ems="10"
            android:fontFamily="@font/helvetica"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="#A8A8A8"
            android:textSize="16sp"
            tools:text="First Name" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/first_name"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="First Name"
            android:backgroundTint="#A8A8A8"
            android:ems="10"
            android:fontFamily="@font/helvetica"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColor="#A8A8A8"
            android:textSize="16sp"
            tools:text="First Name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/last_name"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="First Name"
            android:backgroundTint="#A8A8A8"
            android:ems="10"
            android:fontFamily="@font/helvetica"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColor="#A8A8A8"
            android:textSize="16sp"
            tools:text="First Name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/email"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="Email"
            android:backgroundTint="#A8A8A8"
            android:ems="10"
            android:fontFamily="@font/helvetica"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#A8A8A8"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/biography"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="First Name"
            android:backgroundTint="#A8A8A8"
            android:ems="10"
            android:fontFamily="@font/helvetica"
            android:hint="@string/biography"
            android:inputType="text"
            android:textColor="#A8A8A8"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="First Name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/instagram"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="First Name"
            android:backgroundTint="#A8A8A8"
            android:ems="10"
            android:fontFamily="@font/helvetica"
            android:hint="@string/instagram"
            android:inputType="text"
            android:textColor="#A8A8A8"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="First Name" />

    </LinearLayout>

    <Button
        android:id="@+id/edit_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_save"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/include_menu_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/include_menu_bar"
        layout="@layout/include_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
